Incorrect z-index fixed (#361)
* Incorrect z-index fixed

* Fixed unclickable text next to logo

--- a/simplq/src/styles/logo.module.scss
+++ b/simplq/src/styles/logo.module.scss
@@ -3,7 +3,6 @@
 .logo {
   display: flex;
   cursor: pointer;
-  z-index: 10;
   p {
     font-family: $header-font;
     color: $primary-color-dark;
